# cs7641_3

./: .gitmodules  README.md
assignment1/: README.md  main.py  main_knn.py  main_nn.py  main_svm.py  pyproject.toml  requirements.txt
assignment1/checkpoints/: drybean_best_model.pt  drybean_knn_model.pkl  drybean_svm_best_model.pkl  drybean_svm_linear_model.pkl  drybean_svm_rbf_model.pkl
assignment1/data/: prepare_dataset.py  uciml_adult_train.pkl
assignment1/datasets/: uciml.py
assignment1/models/: mlp.py
assignment2/: README.md  main.py  main_nn.py  main_svm.py  pyproject.toml  requirements.txt
assignment2/checkpoints/: drybean_best_model.pt
assignment2/data/: uciml_adult_test.pkl  uciml_drybean.pkl
assignment2/datasets/: uciml.py
assignment2/pyperch/: __init__.py
assignment2/pyperch/neural/: __init__.py  ga_nn.py
assignment3/: .gitignore  main.py  main_nn.py  pyproject.toml  requirements.txt
assignment3/datasets/: uciml.py
assignment3/models/: mlp.py
