[build-system]
requires = ["setuptools", "wheel"]

[tool.poetry]
name = "assignment1"
version = "0.1.0"
description = "Assignment 1"
authors = ["Tuan Vu <tuan.vu68@yahoo.com>"]
python = "3.10.12"

[tool.poetry.dependencies]
python = "3.10.12"
matplotlib = "3.8.4"
numpy = "1.26.4"
PyYAML = "6.0.1"
torch = "2.2.2"
tqdm = "4.66.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
