[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "assignment2"
version = "0.1.0"
description = "Assignment 2"
readme = "README.md"
authors = ["Tuan Vu <tuan.vu68@yahoo.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.10.12"
matplotlib = "3.8.4"
numpy = "1.26.4"
certifi = "^2024.2.2"
openpyxl = "^3.1.2"
pandas = "^2.2.2"
torch = "^2.3.1"
skorch = "^1.0.0"

